collapsed sidemenu width fix

--- a/src/App.css
+++ b/src/App.css
@@ -17,5 +17,5 @@
 }
 
 .chart-wrapper.expanded {
-  width: 100%;
+  width: calc(100% - 7rem);
 }
